fable/test/valid/data_18.f
      program prog
      complex cnums(2)
      data cnums /-(1,-2),+(-1,2)/
      end
