fable/test/syntax_error/bad_data.f
      program prog
      data (nums(i),i) /1,2/
      end
